// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryTypeIcon should return the correct icon if input is EntryType 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--reviewed"
    title="This marks a reviewed entry"
  >
    <svg
      fill="currentColor"
      viewBox="0 0 426 512"
    >
      <path
        d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`EntryTypeIcon should return the correct icon if input is a string 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--unreviewed"
    title="This marks an unreviewed entry"
  >
    <svg
      fill="currentColor"
      viewBox="0 0 400 512"
    >
      <path
        d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
      />
    </svg>
  </span>
</DocumentFragment>
`;
